--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+     "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.3.0",
