--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-     "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.3.0",
